--- a/week01/01_bovine/starter_code/index.html
+++ b/week01/01_bovine/starter_code/index.html
@@ -32,7 +32,8 @@ Complicating the matter is the ability of cattle to interbreed with other closel
 	<li>A castrated male (occasionally a female or in some areas a bull) kept for draft purposes is called an ox (plural oxen); "ox" may also be used to refer to some carcass products from any adult cattle, such as ox-hide, ox-blood, oxtail, or ox-liver.</li>
 	<li>A springer is a cow or heifer close to calving. </li>
 	
-	<p><a href="https://en.wikipedia.org/wiki/Cattle">Article Excerpted from Wikipedia</a> </p>
+	<p><a href="https://en.wikipedia.org/wiki/Cattle">
+	Article Excerpted from Wikipedia</a> </p>
 
 
 
